--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -22,7 +22,7 @@ body {
     border: 1px solid #999;
     float: left;
     font-size: 24px;
-    font-weight: bold;
+    /* font-weight: bold; */
     line-height: 34px;
     height: 34px;
     margin-right: -1px;
